# linkedin-birthday-auto

./: .dockerignore  .env.pi4  .env.pi4.example  .gitignore  .pre-commit-config.yaml  .setup.state  AI_MIGRATION_GUIDE.md  AMELIORATIONS_2024.md  APP_V2_ANALYSIS_REPORT.md  ARCHITECTURE.md  AUDIT.md  AUDIT_API_ROUTES_DATABASES.md  AUDIT_COMPLET_2025.md  AUDIT_COMPLET_2025_v2.md  AUDIT_FIABILISATION_OPTIMISATION_2025.md  AUDIT_FINDINGS_2025-12-18.md  AUDIT_FIXES.md  AUDIT_PHASE2_REPORT.md  AUDIT_RAPPORT_FINAL.md  AUDIT_REFACTORING_2025-12-18.md  AUDIT_REPORT.md  AUDIT_REPORT_2025-12-18.md  AUDIT_REPORT_COMPLETE.md  AUDIT_SECURITE_2025-12-18.md  AUDIT_SECURITE_PERFORMANCE.md  AUDIT_SUMMARY.md  AUDIT_SUMMARY_2025-12-18.md  AUTOMATION_DEPLOYMENT_PI4.md  Automatisation Linkedin.md  BUGFIXES.md  CHANGELOG.md  CLEANUP_REPORT_2025-11-28.md  CONTEXT.md  CONTEXT7_INTEGRATION.md  CORRECTIONS_ACME.md  DASHBOARD_PASSWORD_GUIDE.md  DEBUGGING.md  DEPENDENCY_AUDIT.md  DEPLOYMENT.md  DEPLOYMENT_FIX_PI4.md  (+105 more)
.github/workflows/: app_v2-ci.yml  birthday_unlimited.yml  build-images.yml  build-security-image.yml  ci.yml  docker-build.yml  main.yml  test.yml  visit_profiles.yml
.setup_backups/: setup-state-20251219_112647_10979.json
_ARCHIVE_2025/: AI_MIGRATION_README.md  ARCHIVE_INDEX.md  AUTOMATION_SCHEDULER_PLAN.md  DOCS_INDEX_OLD.md  GUIDE_INSTALLATION_SIMPLIFIEE.md  PHASE2_MIGRATION_PLAN.md  RAPPORT_SYNTHESE_V3.md  deploy.sh  deploy_pi4_pull.sh  deploy_pi4_standalone.sh  diagnose_dashboard_auth.sh  diagnose_network_traffic.sh  easy_deploy.sh  fix_nginx.sh  fix_nginx_ssl_bootstrap.sh  full_cleanup_deployment.sh  merge_nginx_config.sh  monitor_pi4_health.sh  rebuild-dashboard-pi4.sh  repair_deployment.sh  setup_usb_storage.sh  uncomment_ssl_certs.sh  uninstall_automation_pi4.sh  verify_rpi_docker.sh
_ARCHIVE_2025/docs/: ANTI_INDEXATION_GUIDE.md  ARCHITECTURE.md  BCRYPT_DOCKER_COMPOSE_FIX.md  BUGFIX_BROWSER_CRASH_2025_12_10.md  PLAN_CORRECTION_RPI4.md  RASPBERRY_PI_TROUBLESHOOTING.md  RCLONE_DOCKER_AUTH_GUIDE.md  README.md  SSL_SETUP.md  USB_STORAGE_OPTIMIZATION.md  VERIFY_SECURITY_GUIDE.md
app_v2/: Dockerfile  Dockerfile.base  PRODUCTION_READINESS_PLAN.md  README.md  main.py
app_v2/api/: schemas.py
app_v2/core/: config.py  logging.py  metrics.py  middleware.py  rate_limiter.py  redis_client.py
app_v2/db/: consolidation.py  engine.py  migrations.py  models.py
app_v2/engine/: action_manager.py  auth_manager.py  browser_context.py  selector_engine.py
app_v2/services/: birthday_service.py  visitor_service.py
app_v2/tests/: conftest.py  test_core_rate_limiter.py  test_db_migrations.py  test_health_endpoints.py
config/: config.yaml  proxy_config.example.json  selectors.yaml
dashboard/: .env.example  .gitignore  .npm-choice.md  DEPLOYMENT.md  Dockerfile.prod  Dockerfile.prod.pi4  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  auth.config.ts  deploy.sh  docker-compose.yml  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: ErrorBoundary.tsx
dashboard/lib/: api-config.ts  api.ts  auth.ts  scheduler-api.ts
dashboard/public/: robots.txt
dashboard/scripts/: hash_password.js  start.sh
dashboard/types/: index.ts  next-auth.d.ts  scheduler.ts
data/: late_messages.txt  messages.txt
deployment/: README.md
deployment/nginx/: 429.html  init-ssl.sh  linkedin-bot-acme-bootstrap.conf.template  linkedin-bot-https.conf.template  linkedin-bot-lan.conf.template  linkedin-bot.conf  linkedin-bot.conf.template  (+3 more)
docs/: ARCHITECTURE_DETAILS.md  AUDIT_ARCHITECTURE_V3.md  AUDIT_FINDINGS_SUMMARY.md  AUDIT_REPORT_2025-01.md  AUTHENTICATION_GUIDE.md  AUTOMATION_DEPLOYMENT_PI4.md  BACKUP_STRATEGY.md  BCRYPT_ARM64_FIX.md  CONFIGURATION_SERVEUR_HEADLESS.md  CORRECTIONS_AUDIT_PHASE1.md  DEPLOYMENT.md  DEPLOYMENT_AUTOMATION.md  DISASTER_RECOVERY.md  DNS_FIX_SUMMARY.md  DOCKER_DNS_ANALYSIS.md  DOCKER_DNS_QUICKSTART.md  EMAIL_NOTIFICATIONS_INTEGRATION.md  FIX_NGINX_GUIDE.md  GITHUB_ACTIONS_DEPLOYMENT.md  GOOGLE_OAUTH_SETUP.md  GUIDE_FREEBOX_PORTS.md  HISTORY_ANALYSIS_2025.md  HTTPS_CONFIGURATION.md  INDEX.md  KNOWLEDGE_BASE_v1.1.md  MANUAL_HTTPS_SETUP_SUMMARY.md  MIGRATION_GUIDE.md  MIGRATION_V4.1.md  NGINX_RATE_LIMIT_FIX.md  OVERVIEW_PAGE.md  PASSWORD_HASHING_ROBUSTNESS_2025.md  PASSWORD_MANAGEMENT_GUIDE.md  PROJECT_MASTER_DOC.md  QUICK_START_2025.md  RASPBERRY_PI4_GUIDE.md  RASPBERRY_PI_DEPLOYMENT.md  RASPBERRY_PI_DOCKER_SETUP.md  RASPBERRY_PI_TROUBLESHOOTING.md  README.md  RPI_QUICKSTART.md  (+16 more)
legacy/: README.md  cleanup_old_logs.py  generate_auth_simple.py  generate_auth_state.py  late_messages.txt  main_example.py  messages.txt  selector_validator.py  visit_profiles.py
linkedin-birthday-extension/: CHANGELOG.md  README.md  constants.js  content.js  create_icons.py  manifest.json  popup.html  popup.js  settings.html  settings.js  utils.js
logs/: bot_stats.json  linkedin_bot.prom
scripts/: BACKUP_README.md  README.md  add_security_headers.sh  backup_database.sh  backup_db.py  backup_to_gdrive.sh  check_pi4_optimization.sh  cleanup_chromium_zombies.sh  cleanup_pi4.sh  configure_rpi4_kernel.sh  dashboard_monitoring.sh  debug_ssl_and_gdrive.sh  deploy_pi4_pull.sh  deploy_pi4_standalone.sh  deploy_prod.sh  diagnose_api.sh  diagnose_dashboard_auth.sh  diagnose_https.sh  diagnose_password.sh  easy_deploy.sh  fix_api_healthcheck.sh  fix_docker_dns.sh  fix_env_password.sh  fix_https_certificates.sh  fix_nginx_ratelimit.sh  fix_password_hash.sh  fix_permissions.sh  fix_security_issues.py  full_cleanup_deployment.sh  init_data_files.py  init_env.sh  init_v2_migration.py  install_automation_pi4.sh  install_sudoers.sh  manage_dashboard_password.sh  migrate_compose_references.sh  monitor_pi4_health.sh  monitor_pi4_resources.sh  recreate_dashboard.sh  renew_certificates.sh  (+21 more)
templates/: 404.html  500.html  base.html  config.html  contacts.html  control.html  errors.html  index.html  login.html  logs.html  messages.html  visits.html
tests/: test_bcrypt_arm64.sh
verification/: verify.py
(+248 files in other folders)
