[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-birthday-auto"
version = "2.0.0"
description = "Automate LinkedIn birthday messages with intelligent bot and REST API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "GaspardD78", email = "your-email@example.com"}
]
keywords = ["linkedin", "automation", "birthday", "bot", "selenium", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "playwright>=1.40.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "redis>=5.0.0",  # For atomic rate limiting operations
    "sqlalchemy[asyncio]>=2.0.0",  # SQLAlchemy with async support
    "aiosqlite>=0.19.0",  # Async SQLite driver
]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    # Code quality
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    # Type stubs
    "types-PyYAML>=6.0.12",
]
monitoring = [
    "prometheus-client>=0.19.0",
    "structlog>=23.3.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=0.41b0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]
all = [
    "linkedin-birthday-auto[api,dev,monitoring]",
]

[project.urls]
Homepage = "https://github.com/GaspardD78/linkedin-birthday-auto"
Documentation = "https://github.com/GaspardD78/linkedin-birthday-auto/blob/main/ARCHITECTURE.md"
Repository = "https://github.com/GaspardD78/linkedin-birthday-auto"
Issues = "https://github.com/GaspardD78/linkedin-birthday-auto/issues"

[project.scripts]
linkedin-bot = "main:main"

# ═══════════════════════════════════════════════════════════════════
# BLACK - Code formatting
# ═══════════════════════════════════════════════════════════════════

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Default excludes
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # Project specific
  | migrations
  | __pycache__
)/
'''

# ═══════════════════════════════════════════════════════════════════
# RUFF - Fast Python linter (replaces flake8, isort, etc.)
# ═══════════════════════════════════════════════════════════════════

[tool.ruff]
line-length = 100
target-version = "py39"

# Enable specific rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by black)
    "B008",   # Do not perform function calls in argument defaults
    "B904",   # Within except clause, raise from err
    "SIM105", # Use contextlib.suppress (sometimes explicit is better)
    "UP007",  # Use X | Y for type annotations (keep Optional for clarity)
]

# Exclude directories
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
]

# Allow autofix for specific rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when they start with an underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, etc.
"tests/**/*.py" = [
    "S101",   # Use of assert
    "PLR2004", # Magic value used in comparison
    "S105",   # Possible hardcoded password
    "S106",   # Possible hardcoded password argument
]

# __init__.py can have unused imports
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["src"]
force-sort-within-sections = true

# ═══════════════════════════════════════════════════════════════════
# MYPY - Static type checking
# ═══════════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter checking
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignore missing imports for third-party packages without stubs
[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "fastapi.*",
    "uvicorn.*",
]
ignore_missing_imports = true

# ═══════════════════════════════════════════════════════════════════
# PYTEST - Testing configuration
# ═══════════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Markers for categorizing tests
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may require external resources)",
    "e2e: End-to-end tests (slow, full workflow)",
    "slow: Tests that take a long time to run",
    "requires_auth: Tests that require LinkedIn authentication",
]

# Coverage options
addopts = [
    "-ra",                    # Show summary of all test outcomes
    "--strict-markers",       # Raise error on unknown markers
    "--strict-config",        # Raise error on config issues
    "--showlocals",           # Show local variables in tracebacks
    "--tb=short",             # Shorter traceback format
    # Coverage options (uncomment to enable by default)
    # "--cov=src",
    # "--cov-report=term-missing",
    # "--cov-report=html",
    # "--cov-fail-under=80",
]

# Ignore warnings from third-party packages
filterwarnings = [
    "ignore::DeprecationWarning:playwright.*",
    "ignore::UserWarning:pydantic.*",
]

# ═══════════════════════════════════════════════════════════════════
# COVERAGE - Code coverage reporting
# ═══════════════════════════════════════════════════════════════════

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ═══════════════════════════════════════════════════════════════════
# SETUPTOOLS - Build configuration
# ═══════════════════════════════════════════════════════════════════

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["py.typed"]
